Fixes a couple contrast problems.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -287,6 +287,7 @@ html {
 }
 
 .profile-dog-card {
+  color: #2a2a2a;
   margin-top: 2em;
 }
 
@@ -409,3 +410,9 @@ chat box css */
 *************************
 chat box css */
 
+/* search modal */
+
+.search-title {
+  color: orange !important;
+  text-shadow: none;
+}
